# gpu-meanshift-segmentation

./: README.md
code/meanshiftfilter/branches/oclmeanshiftfilter/: Makefile  edison.cpp  filter.h  luvrgb_kernel.cl  luvrgb_kernel.cu  main.cpp  meanshiftfilter.cpp  meanshiftfilter_gold.cpp  meanshiftfilter_kernel.cl  oclmeanshiftfilter.files  oclmeanshiftfilter.sln  rgbluv.cpp  (+5 more)
code/meanshiftfilter/tags/meanshiftfilter_v0.2_coalesced_float4/: CMakeLists.txt  Makefile  edison.cpp  filter.h  meanshiftfilter.cpp  meanshiftfilter_kernel.cu
code/meanshiftfilter/tags/meanshiftfilter_v0.2_coalesced_float4/Meanshift.xcodeproj/: aquarius.mode1v3  aquarius.pbxuser
code/meanshiftfilter/trunk/: Makefile  edison.cpp  filter.h  luvrgb_kernel.cu  meanshiftfilter.cpp  meanshiftfilter_common.h  meanshiftfilter_gold.cpp  meanshiftfilter_kernel.cu  meanshiftfilter_kernel.h  rgbluv_kernel.cu
code/msfilter/trunk/: Makefile  edison.cpp  edison.h  filter.cpp  filter.h  meanshift.cpp  meanshift_kernel.cu  meanshiftfilter_common.h  meanshiftfilter_gold.cpp  meanshiftfilter_kernel.cu  rlist.cpp  setprecisionandrounding.c  setprecisionandrounding.cpp
latex/Thesis/trunk/: Bibliography.bib  Frontcover.aux  Frontcover.ist  Frontcover.tex  Frontcover.tmproj  Thesis.acn  Thesis.acr  Thesis.alg  Thesis.aux  Thesis.bbl  Thesis.blg  Thesis.brf  Thesis.glg  Thesis.gls  Thesis.ist  Thesis.lof  Thesis.lol  Thesis.lot  Thesis.out  Thesis.tex  Thesis.tmproj  Thesis.toc  algorithm2e.sty  classicthesis-ldpkg.sty  classicthesis.sty  dissertation-figures.sty  dissertation.sty  figures.tex  frontcover.tex
(+165 files in other folders)
